--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.1",
     "@mui/material": "^7.3.5",
+    "@supabase/supabase-js": "^2.87.3",
     "@tailwindcss/vite": "^4.1.17",
     "axios": "^1.13.2",
     "cors": "^2.8.5",
@@ -23,6 +24,7 @@
     "react-dom": "^19.2.0",
     "react-router": "^7.9.6",
     "react-router-dom": "^7.9.6",
+    "recharts": "^3.6.0",
     "tailwindcss": "^4.1.17",
     "zustand": "^5.0.8"
   },
